--- a/scss/api/_index.scss
+++ b/scss/api/_index.scss
@@ -8,6 +8,7 @@
 @forward 'layout';
 @forward 'mask';
 @forward 'media-query';
+@forward 'position';
 @forward 'shadow';
 @forward 'size';
 @forward 'spacing';
