--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -21,7 +21,7 @@
   @include avatar.styles();
   @include badge.styles();
   @include button.styles();
-  // @include card.styles();
+  @include card.styles();
   @include indicator.styles();
   @include keyboard.styles();
   // @include navbar.styles();
