--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -3,6 +3,7 @@
 // --------------------------------
 
 @use 'sass:map';
+@use 'sass:color';
 
 @use '../../tokens' as *;
 @use '../../helpers' as *;
@@ -58,20 +59,22 @@ $schemes: (
       9: map.get($colors, black),
     ),
     srf: (
-      1: map.get($colors, $grey-tone, 0),
-      2: map.get($colors, white),
-      3: map.get($colors, $grey-tone, 1),
-      4: map.get($colors, $grey-tone, 2),
+      0: color.scale(map.get($colors, $grey-tone, 0), $lightness: 20%),
+      1: map.get($colors, white),
+      2: map.get($colors, $grey-tone, 1),
+      3: map.get($colors, $grey-tone, 2),
     ),
     brd: (
+      0: map.get($colors, $grey-tone, 1),
       1: map.get($colors, $grey-tone, 2),
       2: map.get($colors, $grey-tone, 3),
+      3: map.get($colors, $grey-tone, 4),
     ),
     txt: (
-      1: map.get($colors, $grey-tone, 9),
-      2: map.get($colors, $grey-tone, 6),
+      0: map.get($colors, $grey-tone, 9),
+      1: map.get($colors, $grey-tone, 7),
+      2: map.get($colors, $grey-tone, 5),
       3: map.get($colors, $grey-tone, 4),
-      4: map.get($colors, $grey-tone, 3),
     ),
   ),
   dark: (
@@ -88,20 +91,22 @@ $schemes: (
       9: map.get($colors, $grey-tone, 1),
     ),
     srf: (
-      1: map.get($colors, $grey-tone, 9),
-      2: map.get($colors, $grey-tone, 8),
-      3: map.get($colors, $grey-tone, 7),
-      4: map.get($colors, $grey-tone, 6),
-    ),
-    brd: (
+      0: map.get($colors, $grey-tone, 9),
       1: map.get($colors, $grey-tone, 8),
       2: map.get($colors, $grey-tone, 7),
+      3: map.get($colors, $grey-tone, 6),
+    ),
+    brd: (
+      0: map.get($colors, $grey-tone, 8),
+      1: map.get($colors, $grey-tone, 7),
+      2: map.get($colors, $grey-tone, 6),
+      3: map.get($colors, $grey-tone, 5),
     ),
     txt: (
-      1: map.get($colors, $grey-tone, 0),
-      2: map.get($colors, $grey-tone, 3),
+      0: map.get($colors, $grey-tone, 0),
+      1: map.get($colors, $grey-tone, 2),
+      2: map.get($colors, $grey-tone, 4),
       3: map.get($colors, $grey-tone, 5),
-      4: map.get($colors, $grey-tone, 6),
     ),
   ),
 );
