--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,5 +1,6 @@
 @forward 'avatar' as avatar-*;
 @forward 'badge' as badge-*;
+@forward 'breadcrumbs' as breadcrumbs-*;
 @forward 'button' as button-*;
 @forward 'card' as card-*;
 @forward 'indicator' as indicator-*;
@@ -11,6 +12,7 @@
 
 @use 'avatar';
 @use 'badge';
+@use 'breadcrumbs';
 @use 'button';
 @use 'card';
 @use 'indicator';
@@ -22,6 +24,7 @@
 @mixin components {
   @include avatar.styles();
   @include badge.styles();
+  @include breadcrumbs.styles();
   @include button.styles();
   @include card.styles();
   @include indicator.styles();
