--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -252,5 +252,9 @@
     --koi-skew-y: 0;
     --koi-scale-x: 1;
     --koi-scale-y: 1;
+    --koi-shadow: 0 0 #0000;
+    --koi-shadow-color: 0 0 0;
+    --koi-ring-shadow: 0 0 #0000;
+    --koi-ring-offset-shadow: 0 0 #0000;
   }
 }
