--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -21,7 +21,7 @@ $selectors: selector.parse(
 $height: 40px;
 $height-compact: 30px;
 
-$font-size: font(md);
+$font-size: font(sm);
 $leading: text-leading(md);
 $tracking: tracking(wide);
 
